@@ -205,7 +205,10 @@ def exit():
 
     """
     if no_exitfunc:
-        del sys.exitfunc
+        try:
+            del sys.exitfunc
+        except AttributeError:
+            pass
     sys.exit(0)
 
 class MyRPCServer(rpc.RPCServer):
